--- a/views/layouts/header.ejs
+++ b/views/layouts/header.ejs
@@ -1,3 +1,47 @@
 <header class="ml-20 h-20 bg-[#C8EFFE] border-b border-[#82DCFF]">
-  Cabeçalho
+  <div class="flex flex-row content-center items-center justify-between h-full">
+    <div class="flex flex-row ml-7">
+      <!-- Logo -->
+      <a href="#"><img src="./img/logo.png" alt="Logo" class="block"></a>
+      <!-- Menu -->
+      <nav>
+        <ul class="h-full flex items-center ml-7 gap-1">
+          <li class="inline-block"><a href="#" class="px-5 py-2 text-[#2864AE] hover:bg-[#2864AE] hover:text-white rounded-full transition-all duration-500 text-nowrap">WRF</a></li>
+          <li class="inline-block"><a href="#" class="px-5 py-2 bg-[#2864AE] hover:bg-[#2864AE] hover:text-white text-white rounded-full transition-all duration-500 text-nowrap">BAM</a></li>
+          <li class="inline-block"><a href="#" class="px-5 py-2 text-[#2864AE] hover:bg-[#2864AE] hover:text-white rounded-full transition-all duration-500 text-nowrap">Eta 08km</a></li>
+          <li class="inline-block"><a href="#" class="px-5 py-2 text-[#2864AE] hover:bg-[#2864AE] hover:text-white rounded-full transition-all duration-500 text-nowrap">BRAMS 08km</a></li>
+          <li class="inline-block"><a href="#" class="px-5 py-2 text-[#2864AE] hover:bg-[#2864AE] hover:text-white rounded-full transition-all duration-500 text-nowrap">Multimodelo</a></li>
+        </ul>
+      </nav>
+    </div>
+    <!-- Buttons and Profile -->
+    <div class="flex justify-end items-center mr-7">
+      <!-- Buttons -->
+      <nav>
+        <ul class="flex gap-2">
+          <li>
+            <a href="#" class="flex flex-shrink-0 justify-center items-center w-10 h-10  text-[#2864AE] hover:bg-[#2864AE] hover:text-white text-xl p-4 rounded-full transition-all duration-500"><i class="fa-solid fa-bell"></i></a>
+          </li>
+          <li>
+            <a href="#" class="flex flex-shrink-0 justify-center items-center w-10 h-10 text-[#2864AE]  hover:bg-[#2864AE] hover:text-white text-xl rounded-full transition-all duration-500"><i class="fa-solid fa-cog"></i></a>
+          </li>
+        </ul>
+      </nav>
+      <!-- Profile -->
+      <div class="md:ml-4">
+        <a href="#">
+          <div class="flex flex-row justify-start items-center">
+            <div class="w-12 h-12 shrink-0 border-2 border-zinc-50 rounded-full overflow-hidden">
+              <img src="./img/avatar.png" alt="Avatar">
+            </div>
+            <div class="px-2">
+              <div class="text-[#2864AE] font-bold leading-none pt-1">Izabelly</div>
+              <div class="text-[#2864AE] text-xs">Nowcasting</div>
+            </div>
+            <div><i class="text-[#2864AE] fa-solid fa-angle-down"></i></div>
+          </div>
+        </a>
+      </div>
+    </div>
+  </div>
 </header>
