--- a/views/layouts/header.ejs
+++ b/views/layouts/header.ejs
@@ -2,15 +2,16 @@
   <div class="flex flex-row content-center items-center justify-between h-full">
     <div class="flex flex-row ml-7">
       <!-- Logo -->
+      <h1 class="hidden">Previsão Numérica do Tempo</h1>
       <a href="#"><img src="./img/logo.png" alt="Logo" class="block"></a>
       <!-- Menu -->
       <nav>
-        <ul class="h-full flex items-center ml-7 gap-1">
-          <li class="inline-block"><a href="#" class="px-5 py-2 text-[#2864AE] hover:bg-[#2864AE] hover:text-white rounded-full transition-all duration-500 text-nowrap">WRF</a></li>
-          <li class="inline-block"><a href="#" class="px-5 py-2 bg-[#2864AE] hover:bg-[#2864AE] hover:text-white text-white rounded-full transition-all duration-500 text-nowrap">BAM</a></li>
-          <li class="inline-block"><a href="#" class="px-5 py-2 text-[#2864AE] hover:bg-[#2864AE] hover:text-white rounded-full transition-all duration-500 text-nowrap">Eta 08km</a></li>
-          <li class="inline-block"><a href="#" class="px-5 py-2 text-[#2864AE] hover:bg-[#2864AE] hover:text-white rounded-full transition-all duration-500 text-nowrap">BRAMS 08km</a></li>
-          <li class="inline-block"><a href="#" class="px-5 py-2 text-[#2864AE] hover:bg-[#2864AE] hover:text-white rounded-full transition-all duration-500 text-nowrap">Multimodelo</a></li>
+        <ul class="h-full flex items-center ml-7 gap-3">
+          <li class="inline-block"><a href="#" class="px-4 py-1 text-[#2864AE] hover:bg-[#2864AE] hover:text-white rounded-full transition-all duration-500 text-nowrap">WRF</a></li>
+          <li class="inline-block"><a href="#" class="px-4 py-1 bg-[#2864AE] hover:bg-[#2864AE] hover:text-white text-white rounded-full transition-all duration-500 text-nowrap">BAM</a></li>
+          <li class="inline-block"><a href="#" class="px-4 py-1 text-[#2864AE] hover:bg-[#2864AE] hover:text-white rounded-full transition-all duration-500 text-nowrap">Eta 08km</a></li>
+          <li class="inline-block"><a href="#" class="px-4 py-1 text-[#2864AE] hover:bg-[#2864AE] hover:text-white rounded-full transition-all duration-500 text-nowrap">BRAMS 08km</a></li>
+          <li class="inline-block"><a href="#" class="px-4 py-1 text-[#2864AE] hover:bg-[#2864AE] hover:text-white rounded-full transition-all duration-500 text-nowrap">Multimodelo</a></li>
         </ul>
       </nav>
     </div>
