--- a/views/partials/leftbar.ejs
+++ b/views/partials/leftbar.ejs
@@ -1,3 +1,143 @@
-<div class="w-[360px] h-[calc(100vh-80px)] bg-[#F4FCFF] border-r border-[#82DCFF]">
-  Left bar
-</div>
+<section class="w-[360px] h-[calc(100vh-80px)] bg-[#F4FCFF] border-r border-[#82DCFF]">
+  <!-- Header -->
+  <div class="h-14 flex justify-between pl-6 pr-3 bg-[#A8E7FF] border-b border-[#82DCFF]">
+    <div class="h-full flex items-center gap-2">
+      <span class="inline-block text-sm text-[#2864AE]">Região</span>
+      <span class="inline-block text-[#2864AE] text-md"><i class="fa-solid fa-chevron-right"></i></span>
+      <span class="inline-block text-xs text-white px-2 py-1 bg-[#2864AE] rounded-md">BRASIL</span>
+    </div>
+    <div class="flex items-center gap-2">
+      <span class="inline-block text-xs text-[#2864AE]">Ver opções</span>
+      <a href="#" class="flex flex-shrink-0 justify-center items-center w-8 h-8  text-[#2864AE] hover:bg-[#2864AE] hover:text-white text-md p-2 rounded-full transition-all duration-500"><i class="fa-solid fa-chevron-right"></i></a>
+    </div>
+  </div>
+  <!-- Content -->
+  <div class="py-5 border-b border-[#82DCFF]">
+    <div class="px-6">
+      <h2 class="text-black font-medium">Selecione um produto</h2>
+      <p class="text-[#676767] text-xs">Lower Dynamics: MSLP Norm. Anomaly (5-day)</p>
+    </div>
+
+    <div class="pt-5">
+      <ul>
+        <li>
+          <a href="#" class="px-6 h-9 hover:bg-[#D6F3FF] text-sm flex justify-between items-center group">
+            <span class="font-medium">Precip/Moisture</span>
+            <span class="text-[#A8E7FF] text-lg"><i class="fa-solid fa-eye-slash"></i></span>
+          </a>
+        </li>
+        <li>
+          <details open class="group">
+            <summary class="px-6 h-9 hover:bg-[#D6F3FF] text-sm flex items-center cursor-pointer">
+              <span class="text-md mr-1.5 rotate-0 transform group-open:rotate-180 group-open:mr-1.5 transition-all duration-300"><i class="fa-solid fa-chevron-down"></i></span>
+              <span class="font-medium">Lower Dynamics</span>
+            </summary>
+            <ul>
+              <li>
+                <a href=" #" class="px-6 h-9 hover:bg-[#D6F3FF] text-sm flex justify-between items-center group">
+                  <span class="pl-5 font-thin text-[#676767]">850mb Height & Wind</span>
+                  <span class="text-[#A8E7FF] text-lg"><i class="fa-solid fa-eye-slash"></i></span>
+                </a>
+              </li>
+              <li>
+                <a href=" #" class="px-6 h-9 hover:bg-[#D6F3FF] text-sm flex justify-between items-center group">
+                  <span class="pl-5 font-thin text-[#676767]">MSLP & 10m Wind</span>
+                  <span class="text-[#A8E7FF] text-lg"><i class="fa-solid fa-eye-slash"></i></span>
+                </a>
+              </li>
+              <li>
+                <a href=" #" class="px-6 h-9 bg-[#D6F3FF] hover:bg-[#D6F3FF] text-sm flex justify-between items-center group">
+                  <span class="pl-5 font-thin text-[#676767]">Significant Wave Height</span>
+                  <span class="text-[#2864AE] text-lg"><i class="fa-solid fa-eye"></i></span>
+                </a>
+              </li>
+              <li>
+                <a href=" #" class="px-6 h-9 hover:bg-[#D6F3FF] text-sm flex justify-between items-center group">
+                  <span class="pl-5 font-thin text-[#676767]">Wave Period</span>
+                  <span class="text-[#A8E7FF] text-lg"><i class="fa-solid fa-eye-slash"></i></span>
+                </a>
+              </li>
+            </ul>
+          </details>
+        </li>
+        <li>
+          <details class="group">
+            <summary class="px-6 h-9 hover:bg-[#D6F3FF] text-sm flex items-center cursor-pointer">
+              <span class="text-md mr-1.5 rotate-0 transform group-open:rotate-180 group-open:mr-1.5 transition-all duration-300"><i class="fa-solid fa-chevron-down"></i></span>
+              <span class="font-medium">Upper Dynamics</span>
+            </summary>
+            <ul>
+              <li>
+                <a href=" #" class="px-6 h-9 hover:bg-[#D6F3FF] text-sm flex justify-between items-center group">
+                  <span class="pl-5 font-thin text-[#676767]">250mb Wind</span>
+                  <span class="text-[#A8E7FF] text-lg"><i class="fa-solid fa-eye-slash"></i></span>
+                </a>
+              </li>
+              <li>
+                <a href=" #" class="px-6 h-9 hover:bg-[#D6F3FF] text-sm flex justify-between items-center group">
+                  <span class="pl-5 font-thin text-[#676767]">500mb Height Anomaly</span>
+                  <span class="text-[#A8E7FF] text-lg"><i class="fa-solid fa-eye-slash"></i></span>
+                </a>
+              </li>
+              <li>
+                <a href=" #" class="px-6 h-9 hover:bg-[#D6F3FF] text-sm flex justify-between items-center group">
+                  <span class="pl-5 font-thin text-[#676767]">Z500, Vort, & Wind</span>
+                  <span class="text-[#A8E7FF] text-lg"><i class="fa-solid fa-eye-slash"></i></span>
+                </a>
+              </li>
+              <li>
+                <a href=" #" class="px-6 h-9 hover:bg-[#D6F3FF] text-sm flex justify-between items-center group">
+                  <span class="pl-5 font-thin text-[#676767]">500mb Height & MSLP</span>
+                  <span class="text-[#A8E7FF] text-lg"><i class="fa-solid fa-eye-slash"></i></span>
+                </a>
+              </li>
+              <li>
+                <a href=" #" class="px-6 h-9 hover:bg-[#D6F3FF] text-sm flex justify-between items-center group">
+                  <span class="pl-5 font-thin text-[#676767]">Simulated IR Satellite</span>
+                  <span class="text-[#A8E7FF] text-lg"><i class="fa-solid fa-eye-slash"></i></span>
+                </a>
+              </li>
+            </ul>
+          </details>
+        </li>
+        <li>
+          <details class="group">
+            <summary class="px-6 h-9 hover:bg-[#D6F3FF] text-sm flex items-center cursor-pointer">
+              <span class="text-md mr-1.5 rotate-0 transform group-open:rotate-180 group-open:mr-1.5 transition-all duration-300"><i class="fa-solid fa-chevron-down"></i></span>
+              <span class="font-medium">Thermodynamics</span>
+            </summary>
+            <ul>
+              <li>
+                <a href=" #" class="px-6 h-9 hover:bg-[#D6F3FF] text-sm flex justify-between items-center group">
+                  <span class="pl-5 font-thin text-[#676767]">850mb Temperature, Wind, and MSLP</span>
+                  <span class="text-[#A8E7FF] text-lg"><i class="fa-solid fa-eye-slash"></i></span>
+                </a>
+              </li>
+              <li>
+                <a href=" #" class="px-6 h-9 hover:bg-[#D6F3FF] text-sm flex justify-between items-center group">
+                  <span class="pl-5 font-thin text-[#676767]">850mb Temp Anomaly</span>
+                  <span class="text-[#A8E7FF] text-lg"><i class="fa-solid fa-eye-slash"></i></span>
+                </a>
+              </li>
+              <li>
+                <a href=" #" class="px-6 h-9 hover:bg-[#D6F3FF] text-sm flex justify-between items-center group">
+                  <span class="pl-5 font-thin text-[#676767]">2m Temperature (shaded)</span>
+                  <span class="text-[#A8E7FF] text-lg"><i class="fa-solid fa-eye-slash"></i></span>
+                </a>
+              </li>
+              <li>
+                <a href=" #" class="px-6 h-9 hover:bg-[#D6F3FF] text-sm flex justify-between items-center group">
+                  <span class="pl-5 font-thin text-[#676767]">2m Temp Anomaly</span>
+                  <span class="text-[#A8E7FF] text-lg"><i class="fa-solid fa-eye-slash"></i></span>
+                </a>
+              </li>
+            </ul>
+          </details>
+        </li>
+      </ul>
+    </div>
+  </div>
+  <div class="pt-5 pl-6">
+    <img src="./img/govbr.png" alt="Governo Federal">
+  </div>
+</section>
