--- a/views/layouts/aside.ejs
+++ b/views/layouts/aside.ejs
@@ -1,4 +1,4 @@
-<aside class="w-20 h-screen absolute left-0 top-0 bg-[#2864AE] hover:w-80 group transition-all ease-in-out duration-200">
+<aside class="w-20 h-screen absolute left-0 top-0 bg-[#2864AE] hover:w-80 group transition-all duration-200 z-50">
   <nav class="h-full flex flex-col content-center justify-center">
     <ul class="p-2 flex flex-col gap-3">
       <li class="flex justify-center group-hover:justify-start"><a href="#" class="flex flex-row items-center px-4 py-1 hover:bg-[#3D73B6] rounded-full text-white text-center">
