--- a/views/partials/home.ejs
+++ b/views/partials/home.ejs
@@ -1,4 +1,4 @@
-<main class="ml-20">
+<main class="relative ml-20">
   <div class="flex flex-row">
     <div>
       <%- include("../partials/leftbar"); %>
