--- a/views/partials/toolbar.ejs
+++ b/views/partials/toolbar.ejs
@@ -1,1 +1,1 @@
-<section>Toolbar</section>
+<section class="absolute top-0 left-[360px] m-8 w-[360px] h-[calc(100vh-144px)] border border-[#82DCFF]">Toolbar</section>
