--- a/views/partials/leftbar.ejs
+++ b/views/partials/leftbar.ejs
@@ -18,8 +18,8 @@
         <!-- Products -->
         <section class="py-5 border-b border-[#82DCFF]">
           <div class="px-6">
-            <h2 class="text-black font-medium">Selecione um produto</h2>
-            <p class="text-[#676767] text-xs">Lower Dynamics: MSLP Norm. Anomaly (5-day)</p>
+            <h2 class="text-black font-medium">Selecione o produto</h2>
+            <p class="text-[#676767] text-xs">Lower Dynamics: MSLP Norm. Anomaly</p>
           </div>
           <div class="pt-5">
             <ul>
