--- a/views/partials/home.ejs
+++ b/views/partials/home.ejs
@@ -5,7 +5,29 @@
     </div>
     <div>
       <%- include("../partials/toolbar"); %>
-      Main
+
+      <div class="relative w-[calc(100vw-440px)] h-[calc(100vh-80px)]">
+
+        <div class="pt-4 px-4 flex justify-center">
+          <img src="https://www.tropicaltidbits.com/analysis/models/gfs/2024051000/gfs_apcpn24_samer_10.png" alt="Imagem do GFS">
+        </div>
+
+        <div class="absolute bottom-0 left-0 pb-6 px-6 w-full flex flex-row items-center">
+          <input id="picture-range" type="range" min="1" max="76" value="62" class="w-full h-1 rounded-lg cursor-pointer pr-2">
+          <ul class="flex gap-2 ml-4">
+            <li>
+              <a href="#" class="flex flex-shrink-0 justify-center items-center w-10 h-10  bg-[#2864AE] hover:bg-[#0075FF] text-white text-lg p-4 rounded-full transition-all duration-500"><i class="fa-solid fa-arrow-left"></i></a>
+            </li>
+            <li>
+              <a href="#" class="flex flex-shrink-0 justify-center items-center w-10 h-10 bg-[#2864AE] hover:bg-[#0075FF] text-white text-lg rounded-full transition-all duration-500"><i class="fa-solid fa-play"></i></a>
+            </li>
+            <li>
+              <a href="#" class="flex flex-shrink-0 justify-center items-center w-10 h-10 bg-[#2864AE] hover:bg-[#0075FF] text-white text-lg rounded-full transition-all duration-500"><i class="fa-solid fa-arrow-right"></i></a>
+            </li>
+          </ul>
+        </div>
+      </div>
+
     </div>
   </div>
 </main>
