Fix toolbar close button

--- a/views/partials/leftbar.ejs
+++ b/views/partials/leftbar.ejs
@@ -8,7 +8,7 @@
     </div>
     <div class="flex items-center gap-2">
       <span class="inline-block text-xs text-[#2864AE]">Ver opções</span>
-      <a href="#" class="flex flex-shrink-0 justify-center items-center w-8 h-8  text-[#2864AE] hover:bg-[#2864AE] hover:text-white text-md p-2 rounded-full transition-all duration-500"><i class="fa-solid fa-chevron-right"></i></a>
+      <a href="#" class="flex flex-shrink-0 justify-center items-center w-8 h-8  text-[#2864AE] hover:bg-[#2864AE] hover:text-white text-md p-2 rounded-full transition-all duration-500" onclick="document.querySelector('#toolbar').classList.remove('hidden')"><i class=" fa-solid fa-chevron-right"></i></a>
     </div>
   </section>
   <!-- Content -->
