--- a/views/partials/toolbar.ejs
+++ b/views/partials/toolbar.ejs
@@ -1,4 +1,4 @@
-<section class="absolute top-0 left-[360px] m-8 w-[360px] h-[calc(100vh-144px)] border border-[#82DCFF] rounded-md z-50">
+<section id="toolbar" class="absolute top-0 left-[360px] m-8 w-[360px] h-[calc(100vh-144px)] border border-[#82DCFF] rounded-md z-50" onclick="this.classList.add('hidden')">
   <!-- Header -->
   <section class="h-14 flex justify-between pl-6 pr-3 bg-[#A8E7FF] border-b border-[#82DCFF] rounded-t-md">
     <div class="h-full flex items-center gap-2">
