--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -12,7 +12,7 @@
 
     <%- include("../layouts/header"); %>
 
-    <%- include("../partials/home"); %>
+    <%- include("../partials/home", { model: model }); %>
 
     <%- include("../layouts/footer"); %>
   </body>
