--- a/views/partials/home.ejs
+++ b/views/partials/home.ejs
@@ -9,6 +9,7 @@
       <div class="relative w-[calc(100vw-440px)] h-[calc(100vh-80px)]">
 
         <div class="pt-4 px-4 flex justify-center">
+          <h1>[<%= model.name %> - <%= model.turn %>]</h1>
           <img src="https://www.tropicaltidbits.com/analysis/models/gfs/2024051700/gfs_apcpn24_samer_10.png" alt="Imagem do GFS">
         </div>
 
